--- a/app/views/statuses/show.html.erb
+++ b/app/views/statuses/show.html.erb
@@ -15,7 +15,7 @@
         To get started, you'll need to add a FreeFeed access token so Feeder can post on your behalf.
       </p>
       <p>
-        <%= link_to "Add FreeFeed token", settings_access_tokens_path, class: "btn btn-primary" %>
+        <%= link_to "Add token", new_settings_access_token_path, class: "btn btn-primary" %>
       </p>
     </div>
   </div>
@@ -28,7 +28,7 @@
         Great! You've added a FreeFeed access token. Now you can create your first feed.
       </p>
       <p>
-        <%= link_to "Create feed", new_feed_path, class: "btn btn-primary" %>
+        <%= link_to "Add feed", new_feed_path, class: "btn btn-primary" %>
       </p>
     </div>
   </div>
