User state-based onboarding (#157)
* Restrict navigation and access for onboarding users

* Implement onboarding flow with status page variations

* Add onboarding trait and policy tests

* Add comments

* Remove onboarding-specific redirect from user_not_authorized

* Simplify feed creation onboarding check

* Use user.active? instead of !user.onboarding? for clarity

* Update button label

* Use `authenticated?` predicate in the policies

* Clean up the tests

* Better active nav link matching

* Typo

* Typo

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,16 +44,18 @@
                 <li class="nav-item">
                   <%= link_to "Status", status_path, class: "nav-link #{'active text-decoration-underline' if current_page?(status_path)}" %>
                 </li>
-                <li class="nav-item">
-                  <%= link_to "Feeds", feeds_path, class: "nav-link #{'active text-decoration-underline' if current_page?(feeds_path) || controller_name == 'feeds'}" %>
-                </li>
-                <li class="nav-item">
-                  <%= link_to "Posts", posts_path, class: "nav-link #{'active text-decoration-underline' if current_page?(posts_path) || controller_name == 'posts'}" %>
-                </li>
-                <% if policy(Event).index? %>
+                <% if Current.user.active? %>
                   <li class="nav-item">
-                    <%= link_to "Admin Panel", admin_path, class: "nav-link #{'active text-decoration-underline' if current_page?(admin_path) || controller_name.start_with?('admin')}" %>
+                    <%= link_to "Feeds", feeds_path, class: "nav-link #{'active text-decoration-underline' if current_page?(feeds_path) || controller_name == 'feeds/'}" %>
                   </li>
+                  <li class="nav-item">
+                    <%= link_to "Posts", posts_path, class: "nav-link #{'active text-decoration-underline' if current_page?(posts_path) || controller_name == 'posts/'}" %>
+                  </li>
+                  <% if policy(Event).index? %>
+                    <li class="nav-item">
+                      <%= link_to "Admin Panel", admin_path, class: "nav-link #{'active text-decoration-underline' if current_page?(admin_path) || controller_name.start_with?('admin/')}" %>
+                    </li>
+                  <% end %>
                 <% end %>
               </ul>
 
