--- a/app/views/profile_mailer/email_change_confirmation.html.erb
+++ b/app/views/profile_mailer/email_change_confirmation.html.erb
@@ -8,7 +8,7 @@
 
 <p><%= link_to "Confirm new email address", @confirmation_url %></p>
 
-<p>This link will expire in 15 minutes for security reasons.</p>
+<p>This link will expire in 24 hours for security reasons.</p>
 
 <p>If you didn't request this change, please ignore this email.</p>
 
