Reduce redundancy in email confirmation templates

--- a/app/views/profile_mailer/account_confirmation.html.erb
+++ b/app/views/profile_mailer/account_confirmation.html.erb
@@ -2,7 +2,7 @@
 
 <p>Hello,</p>
 
-<p>Thanks for signing up! Please confirm your email address to activate your account.</p>
+<p>Thanks for signing up! Confirm your email to activate your account:</p>
 
 <p><%= link_to "Confirm email address", @confirmation_url %></p>
 
