--- a/app/views/profile_mailer/account_confirmation.text.erb
+++ b/app/views/profile_mailer/account_confirmation.text.erb
@@ -2,9 +2,7 @@ Confirm your email address
 
 Hello,
 
-Thanks for signing up! Please confirm your email address to activate your account.
-
-Please visit the link below:
+Thanks for signing up! Confirm your email below to activate your account:
 
 <%= @confirmation_url %>
 
