--- a/app/views/registrations/show.html.erb
+++ b/app/views/registrations/show.html.erb
@@ -1,49 +1,45 @@
 <% content_for :title, "Register" %>
 
 <div class="row justify-content-center">
-  <div class="col-md-6">
+  <div class="col-md-8 col-lg-6">
     <% if @invite.used? %>
       <p>This invitation link has already been used.</p>
+      <%# TBD: Add more meaningful instructions for the user %>
       <p>But here are some <a href="https://duckduckgo.com/?q=cat+pictures&ia=images&iax=images">cat pictures</a>.</p>
     <% else %>
       <h1 class="mb-4">Create Your Account</h1>
 
       <div class="alert alert-info mb-4">
-        <strong><%= @invite.created_by_user.name.presence || "Somebody" %></strong> has invited you to join Feeder!
+        <%= @invite.created_by_user.name.presence || "Somebody" %> has invited you to join Feeder!
       </div>
 
       <%= form_with model: @user, url: registration_path(code: params[:code]), method: :post, local: true do |form| %>
         <% if @user.errors.any? %>
           <div class="alert alert-danger">
-            <h5>Please fix the following errors:</h5>
-            <ul class="mb-0">
-              <% @user.errors.full_messages.each do |message| %>
-                <li><%= message %></li>
-              <% end %>
-            </ul>
+            <%= @user.errors.full_messages.to_sentence.capitalize %>
           </div>
         <% end %>
 
         <div class="mb-3">
-          <%= form.label :name, class: "form-label" %>
+          <%= form.label :name, class: "form-label fw-bold" %>
           <%= form.text_field :name, class: "form-control", autofocus: true, required: true %>
           <div class="form-text">You can change this anytime</div>
         </div>
 
         <div class="mb-3">
-          <%= form.label :email_address, "Email", class: "form-label" %>
+          <%= form.label :email_address, "Email", class: "form-label fw-bold" %>
           <%= form.email_field :email_address, class: "form-control", required: true %>
           <div class="form-text">For password recovery only – we don't have a mailing list, no worries</div>
         </div>
 
         <div class="mb-3">
-          <%= form.label :password, class: "form-label" %>
+          <%= form.label :password, class: "form-label fw-bold" %>
           <%= form.password_field :password, class: "form-control", required: true %>
           <div class="form-text">Minimum 10 characters</div>
         </div>
 
-        <div class="mb-3">
-          <%= form.label :password_confirmation, class: "form-label" %>
+        <div class="mb-4">
+          <%= form.label :password_confirmation, class: "form-label fw-bold" %>
           <%= form.password_field :password_confirmation, class: "form-control", required: true %>
         </div>
 
