--- a/app/views/profile_mailer/email_change_confirmation.text.erb
+++ b/app/views/profile_mailer/email_change_confirmation.text.erb
@@ -4,11 +4,9 @@ Hello,
 
 You requested to change your email address to <%= @new_email %>.
 
-Please visit the link below to confirm this change:
-
 <%= @confirmation_url %>
 
-This link will expire in 15 minutes for security reasons.
+This link will expire in 24 hours for security reasons.
 
 If you didn't request this change, please ignore this email.
 
