--- a/app/views/profile_mailer/email_change_confirmation.html.erb
+++ b/app/views/profile_mailer/email_change_confirmation.html.erb
@@ -4,11 +4,9 @@
 
 <p>You requested to change your email address to <strong><%= @new_email %></strong>.</p>
 
-<p>Please click the link below to confirm this change:</p>
-
 <p><%= link_to "Confirm new email address", @confirmation_url %></p>
 
-<p>This link will expire in 15 minutes for security reasons.</p>
+<p>This link will expire in 24 hours for security reasons.</p>
 
 <p>If you didn't request this change, please ignore this email.</p>
 
