--- a/app/views/registrations/show.html.erb
+++ b/app/views/registrations/show.html.erb
@@ -1,51 +1,53 @@
 <% content_for :title, "Register" %>
 
-<div class="row justify-content-center">
-  <div class="col-md-8 col-lg-6">
-    <% if @invite.used? %>
+<% if @invite.used? %>
+  <div class="row justify-content-center">
+    <div class="col-md-8 col-lg-6">
       <p>This invitation link has already been used.</p>
       <%# TBD: Add more meaningful instructions for the user %>
       <p>But here are some <a href="https://duckduckgo.com/?q=cat+pictures&ia=images&iax=images">cat pictures</a>.</p>
-    <% else %>
-      <h1 class="mb-4">Create Your Account</h1>
-
-      <div class="alert alert-info mb-4">
+    </div>
+  </div>
+<% else %>
+  <%= render SmallBoxComponent.new(title: "Create Your Account") do |c| %>
+    <% c.with_notice do %>
+      <div class="alert alert-info">
         <%= @invite.created_by_user.name.presence || "Somebody" %> has invited you to join Feeder!
       </div>
+    <% end %>
 
-      <%= form_with model: @user, url: registration_path(code: params[:code]), method: :post, local: true do |form| %>
-        <% if @user.errors.any? %>
-          <div class="alert alert-danger">
-            <%= @user.errors.full_messages.to_sentence.capitalize %>
-          </div>
-        <% end %>
+    <% c.with_footer do %>
+      <%= link_to "Sign In", new_session_path, class: "text-decoration-none" %>
+    <% end %>
 
-        <div class="mb-3">
-          <%= form.label :name, class: "form-label fw-bold" %>
-          <%= form.text_field :name, class: "form-control", autofocus: true, required: true %>
-          <div class="form-text">You can change this anytime</div>
-        </div>
-
-        <div class="mb-3">
-          <%= form.label :email_address, "Email", class: "form-label fw-bold" %>
-          <%= form.email_field :email_address, class: "form-control", required: true %>
-          <div class="form-text">For password recovery only – we don't have a mailing list, no worries</div>
-        </div>
-
-        <div class="mb-4">
-          <%= form.label :password, class: "form-label fw-bold" %>
-          <%= form.password_field :password, class: "form-control", required: true %>
-          <div class="form-text">Minimum 10 characters</div>
-        </div>
-
-        <div class="d-grid">
-          <%= form.submit "Create Account", class: "btn btn-primary" %>
+    <%= form_with model: @user, url: registration_path(code: params[:code]), method: :post, local: true do |form| %>
+      <% if @user.errors.any? %>
+        <div class="alert alert-danger">
+          <%= @user.errors.full_messages.to_sentence.capitalize %>
         </div>
       <% end %>
 
-      <div class="mt-3 text-center">
-        <%= link_to "Sign In", new_session_path, class: "text-decoration-none" %>
+      <div class="mb-3">
+        <%= form.label :name, class: "form-label fw-bold" %>
+        <%= form.text_field :name, class: "form-control", autofocus: true, required: true %>
+        <div class="form-text">You can change this anytime</div>
+      </div>
+
+      <div class="mb-3">
+        <%= form.label :email_address, "Email", class: "form-label fw-bold" %>
+        <%= form.email_field :email_address, class: "form-control", required: true %>
+        <div class="form-text">For password recovery only – we don't have a mailing list, no worries</div>
+      </div>
+
+      <div class="mb-4">
+        <%= form.label :password, class: "form-label fw-bold" %>
+        <%= form.password_field :password, class: "form-control", required: true %>
+        <div class="form-text">Minimum 10 characters</div>
+      </div>
+
+      <div class="d-grid">
+        <%= form.submit "Create Account", class: "btn btn-primary" %>
       </div>
     <% end %>
-  </div>
-</div>
+  <% end %>
+<% end %>
