Remove redundant component params

--- a/app/views/registration/confirmations/new.html.erb
+++ b/app/views/registration/confirmations/new.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "Resend Confirmation" %>
 
-<%= render SmallBoxComponent.new(title: "Resend Confirmation Email", column_classes: "col-md-6") do |c| %>
+<%= render SmallBoxComponent.new(title: "Resend Confirmation Email") do |c| %>
   <% c.with_notice do %>
     <p>Enter your email address and we'll send you a new confirmation link.</p>
   <% end %>
