--- a/app/views/passwords/edit.html.erb
+++ b/app/views/passwords/edit.html.erb
@@ -1,4 +1,4 @@
-<%= render SmallBoxComponent.new(title: "Update Password", column_classes: "col-8") do |c| %>
+<%= render SmallBoxComponent.new(title: "Update Password") do |c| %>
   <% if flash[:alert] %>
     <div class="alert alert-danger" role="alert">
       <%= flash[:alert] %>
@@ -8,7 +8,7 @@
   <%= form_with url: password_path(params[:token]), method: :put, local: true do |form| %>
     <div class="mb-3">
       <%= form.label :password, "New Password", class: "form-label fw-bold" %>
-      <%= form.password_field :password, required: true, autocomplete: "new-password", placeholder: "Enter new password", maxlength: 72, class: "form-control" %>
+      <%= form.password_field :password, required: true, autofocus: true, autocomplete: "new-password", placeholder: "Enter new password", maxlength: 72, class: "form-control" %>
     </div>
 
     <div class="mb-3">
