--- a/app/views/passwords/new.html.erb
+++ b/app/views/passwords/new.html.erb
@@ -12,11 +12,11 @@
   <%= form_with url: passwords_path, local: true do |form| %>
     <div class="mb-4">
       <%= form.label :email_address, "Email Address", class: "form-label fw-bold" %>
-      <%= form.email_field :email_address, required: true, autofocus: true, autocomplete: "username", placeholder: "Enter your email address", value: params[:email_address], class: "form-control" %>
+      <%= form.email_field :email_address, required: true, autofocus: true, autocomplete: "username", placeholder: "Enter your email address", value: params[:email_address], class: "form-control form-control-lg" %>
     </div>
 
     <div class="d-grid">
-      <%= form.submit "Email reset instructions", class: "btn btn-primary" %>
+      <%= form.submit "Email reset instructions", class: "btn btn-primary btn-lg" %>
     </div>
   <% end %>
 <% end %>
