--- a/app/views/registration/confirmations/new.html.erb
+++ b/app/views/registration/confirmations/new.html.erb
@@ -12,11 +12,11 @@
   <%= form_with url: registration_confirmations_path, method: :post, local: true do |form| %>
     <div class="mb-3">
       <%= form.label :email_address, "Email", class: "form-label fw-bold" %>
-      <%= form.email_field :email_address, class: "form-control", autofocus: true, required: true %>
+      <%= form.email_field :email_address, class: "form-control form-control-lg", autofocus: true, required: true %>
     </div>
 
     <div class="d-grid">
-      <%= form.submit "Send Confirmation Email", class: "btn btn-primary" %>
+      <%= form.submit "Send Confirmation Email", class: "btn btn-primary btn-lg" %>
     </div>
   <% end %>
 <% end %>
