--- a/app/views/registrations/show.html.erb
+++ b/app/views/registrations/show.html.erb
@@ -29,24 +29,24 @@
 
       <div class="mb-3">
         <%= form.label :name, class: "form-label fw-bold" %>
-        <%= form.text_field :name, class: "form-control", autofocus: true, required: true %>
+        <%= form.text_field :name, class: "form-control form-control-lg", autofocus: true, required: true %>
         <div class="form-text">You can change this anytime</div>
       </div>
 
       <div class="mb-3">
         <%= form.label :email_address, "Email", class: "form-label fw-bold" %>
-        <%= form.email_field :email_address, class: "form-control", required: true %>
+        <%= form.email_field :email_address, class: "form-control form-control-lg", required: true %>
         <div class="form-text">For password recovery only – we don't have a mailing list, no worries</div>
       </div>
 
       <div class="mb-4">
         <%= form.label :password, class: "form-label fw-bold" %>
-        <%= form.password_field :password, class: "form-control", required: true %>
+        <%= form.password_field :password, class: "form-control form-control-lg", required: true %>
         <div class="form-text">Minimum 10 characters</div>
       </div>
 
       <div class="d-grid">
-        <%= form.submit "Create Account", class: "btn btn-primary" %>
+        <%= form.submit "Create Account", class: "btn btn-primary btn-lg" %>
       </div>
     <% end %>
   <% end %>
