Use larger font size for notices

--- a/app/views/registration/confirmations/new.html.erb
+++ b/app/views/registration/confirmations/new.html.erb
@@ -2,7 +2,7 @@
 
 <%= render SmallBoxComponent.new(title: "Resend Confirmation") do |c| %>
   <% c.with_notice do %>
-    <p>Enter your email address and we'll send you a new confirmation link.</p>
+    <p class="fs-5">Enter your email address and we'll send you a new confirmation link.</p>
   <% end %>
 
   <% c.with_footer do %>
