--- a/app/views/registrations/show.html.erb
+++ b/app/views/registrations/show.html.erb
@@ -42,7 +42,7 @@
       <div class="mb-4">
         <%= form.label :password, class: "form-label fw-bold" %>
         <%= form.password_field :password, class: "form-control form-control-lg", required: true %>
-        <div class="form-text">Minimum 10 characters</div>
+        <div class="form-text">Pick a strong one, <%= User::PASSWORD_MIN_LENGTH %> characters minimum</div>
       </div>
 
       <div class="d-grid">
