--- a/app/views/registrations/show.html.erb
+++ b/app/views/registrations/show.html.erb
@@ -36,7 +36,7 @@
       <div class="mb-3">
         <%= form.label :email_address, "Email", class: "form-label fw-bold" %>
         <%= form.email_field :email_address, class: "form-control form-control-lg", required: true %>
-        <div class="form-text">For password recovery only – we don't have a mailing list, no worries</div>
+        <div class="form-text">For password recovery only, we don't spam</div>
       </div>
 
       <div class="mb-4">
