--- a/app/components/small_box_component.html.erb
+++ b/app/components/small_box_component.html.erb
@@ -1,5 +1,5 @@
 <div class="row justify-content-center">
-  <div class="col-12 mx-auto" style="max-width: <%= @max_width %>">
+  <div class="col-12 mx-auto" style="max-width: 28rem">
     <h1 class="text-center mb-4"><%= @title %></h1>
 
     <% if notice %>
