--- a/app/views/passwords/edit.html.erb
+++ b/app/views/passwords/edit.html.erb
@@ -8,12 +8,12 @@
   <%= form_with url: password_path(params[:token]), method: :put, local: true do |form| %>
     <div class="mb-3">
       <%= form.label :password, "New Password", class: "form-label fw-bold" %>
-      <%= form.password_field :password, required: true, autofocus: true, autocomplete: "new-password", placeholder: "Enter new password", maxlength: 72, class: "form-control form-control-lg" %>
+      <%= form.password_field :password, required: true, autofocus: true, autocomplete: "new-password", placeholder: "Enter new password", maxlength: User::PASSWORD_MAX_LENGTH, class: "form-control form-control-lg" %>
     </div>
 
     <div class="mb-3">
       <%= form.label :password_confirmation, "Confirm Password", class: "form-label fw-bold" %>
-      <%= form.password_field :password_confirmation, required: true, autocomplete: "new-password", placeholder: "Repeat new password", maxlength: 72, class: "form-control form-control-lg" %>
+      <%= form.password_field :password_confirmation, required: true, autocomplete: "new-password", placeholder: "Repeat new password", maxlength: User::PASSWORD_MAX_LENGTH, class: "form-control form-control-lg" %>
     </div>
 
     <div class="d-grid">
