Mute used invites

--- a/app/views/invites/_table.html.erb
+++ b/app/views/invites/_table.html.erb
@@ -14,7 +14,7 @@
           <tr id="<%= dom_id(invite) %>" class="<%= 'highlight-new' if local_assigns[:new_invite_id] == invite.id %>">
             <td>
               <div class="d-flex align-items-center gap-2">
-                <code><%= registration_url(code: invite.id) %></code>
+                <code class="<%= 'text-muted' if invite.invited_user %>"><%= registration_url(code: invite.id) %></code>
                 <button type="button" class="btn btn-sm btn-link text-muted text-decoration-none p-0" data-controller="clipboard" data-clipboard-text-value="<%= registration_url(code: invite.id) %>" data-action="click->clipboard#copy" title="Copy invitation link to clipboard">
                   <%= icon("clipboard") %>
                 </button>
