--- a/app/components/small_box_component.html.erb
+++ b/app/components/small_box_component.html.erb
@@ -9,7 +9,7 @@
     <%= content %>
 
     <% if footer %>
-      <div class="text-center mt-3">
+      <div class="mt-3">
         <%= footer %>
       </div>
     <% end %>
