--- a/app/views/passwords/new.html.erb
+++ b/app/views/passwords/new.html.erb
@@ -1,4 +1,4 @@
-<%= render SmallBoxComponent.new(title: "Forgot Password?") do |c| %>
+<%= render SmallBoxComponent.new(title: "Forgot password?") do |c| %>
   <% c.with_footer do %>
     <%= link_to "Back to sign in", new_session_path, class: "text-muted" %>
   <% end %>
@@ -15,7 +15,7 @@
       <%= form.email_field :email_address, required: true, autofocus: true, autocomplete: "username", placeholder: "Enter your email address", value: params[:email_address], class: "form-control form-control-lg" %>
     </div>
 
-    <div class="d-grid">
+    <div class="d-flex gap-2">
       <%= form.submit "Email reset instructions", class: "btn btn-primary btn-lg" %>
     </div>
   <% end %>
