--- a/app/views/registration/confirmation_pending/show.html.erb
+++ b/app/views/registration/confirmation_pending/show.html.erb
@@ -10,9 +10,9 @@
 
     <p>The confirmation link will expire in 24 hours for security reasons.</p>
 
-    <p>Once you've confirmed your email, you can sign in to your account.</p>
+    <p class="mb-4">Once you've confirmed your email, you can sign in to your account.</p>
 
-    <div class="d-grid gap-2 mt-4">
+    <div class="d-flex gap-2">
       <%= link_to "Log In", new_session_path, class: "btn btn-primary btn-lg" %>
     </div>
 
