--- a/app/views/registration/confirmations/new.html.erb
+++ b/app/views/registration/confirmations/new.html.erb
@@ -1,24 +1,22 @@
 <% content_for :title, "Resend Confirmation" %>
 
-<div class="row justify-content-center">
-  <div class="col-md-6">
-    <h1 class="mb-4">Resend Confirmation Email</h1>
+<%= render SmallBoxComponent.new(title: "Resend confirmation") do |c| %>
+  <% c.with_notice do %>
+    <p class="fs-5">Enter your email address and we'll send you a new confirmation link.</p>
+  <% end %>
 
-    <p>Enter your email address and we'll send you a new confirmation link.</p>
+  <% c.with_footer do %>
+    <%= link_to "Back to sign in", new_session_path, class: "text-muted" %>
+  <% end %>
 
-    <%= form_with url: registration_confirmations_path, method: :post, local: true do |form| %>
-      <div class="mb-3">
-        <%= form.label :email_address, "Email", class: "form-label" %>
-        <%= form.email_field :email_address, class: "form-control", autofocus: true, required: true %>
-      </div>
-
-      <div class="d-grid">
-        <%= form.submit "Send Confirmation Email", class: "btn btn-primary" %>
-      </div>
-    <% end %>
-
-    <div class="mt-3 text-center">
-      <%= link_to "Back to Sign In", new_session_path, class: "text-decoration-none" %>
+  <%= form_with url: registration_confirmations_path, method: :post, local: true do |form| %>
+    <div class="mb-4">
+      <%= form.label :email_address, "Email", class: "form-label fw-bold" %>
+      <%= form.email_field :email_address, class: "form-control form-control-lg", autofocus: true, required: true %>
     </div>
-  </div>
-</div>
+
+    <div class="d-flex gap-2">
+      <%= form.submit "Send Confirmation Email", class: "btn btn-primary btn-lg" %>
+    </div>
+  <% end %>
+<% end %>
