--- a/app/views/registrations/show.html.erb
+++ b/app/views/registrations/show.html.erb
@@ -1,51 +1,68 @@
 <% content_for :title, "Register" %>
 
-<div class="row justify-content-center">
-  <div class="col-md-8 col-lg-6">
-    <% if @invite.used? %>
-      <p>This invitation link has already been used.</p>
-      <%# TBD: Add more meaningful instructions for the user %>
-      <p>But here are some <a href="https://duckduckgo.com/?q=cat+pictures&ia=images&iax=images">cat pictures</a>.</p>
-    <% else %>
-      <h1 class="mb-4">Create Your Account</h1>
+<% if @invite.nil? %>
+  <%= render SmallBoxComponent.new(title: "Incorrect invitation code") do |c| %>
+    <p>This invitation link is not valid. It may have been deleted or the link was copied incorrectly.</p>
 
-      <div class="alert alert-info mb-4">
-        <%= @invite.created_by_user.name.presence || "Somebody" %> has invited you to join Feeder!
-      </div>
+    <p><strong>Already have an account?</strong></p>
+    <p><%= link_to "Sign in", new_session_path %> with your existing credentials.</p>
 
-      <%= form_with model: @user, url: registration_path(code: params[:code]), method: :post, local: true do |form| %>
-        <% if @user.errors.any? %>
-          <div class="alert alert-danger">
-            <%= @user.errors.full_messages.to_sentence.capitalize %>
-          </div>
-        <% end %>
+    <p><strong>Need an invitation?</strong></p>
+    <p>Ask someone who already uses Feeder to send you an invitation link.</p>
+  <% end %>
+<% elsif @invite.used? %>
+  <%= render SmallBoxComponent.new(title: "Invitation already used") do |c| %>
+    <p>This invitation link has already been used to create an account.</p>
 
-        <div class="mb-3">
-          <%= form.label :name, class: "form-label fw-bold" %>
-          <%= form.text_field :name, class: "form-control", autofocus: true, required: true %>
-          <div class="form-text">You can change this anytime</div>
-        </div>
+    <p><strong>Already have an account?</strong></p>
+    <ul>
+      <li>If you forgot your password, you can <%= link_to "reset it here", new_password_path %>.</li>
+      <li>Otherwise, <%= link_to "sign in", new_session_path %> with your existing credentials.</li>
+    </ul>
 
-        <div class="mb-3">
-          <%= form.label :email_address, "Email", class: "form-label fw-bold" %>
-          <%= form.email_field :email_address, class: "form-control", required: true %>
-          <div class="form-text">For password recovery only – we don't have a mailing list, no worries</div>
-        </div>
+    <p><strong>Need a new invitation?</strong></p>
+    <p>Contact the person who sent you this link and ask them to send a new invitation.</p>
+  <% end %>
+<% else %>
+  <%= render SmallBoxComponent.new(title: "Create your account") do |c| %>
+    <% c.with_notice do %>
+      <p class="fs-5">
+        <%= @invite.created_by_user.name.presence || "Somebody" %> has invited you to join Feeder! 🎉
+      </p>
+    <% end %>
 
-        <div class="mb-4">
-          <%= form.label :password, class: "form-label fw-bold" %>
-          <%= form.password_field :password, class: "form-control", required: true %>
-          <div class="form-text">Minimum 10 characters</div>
-        </div>
+    <% c.with_footer do %>
+      <%= link_to "Sign In", new_session_path, class: "text-muted" %>
+    <% end %>
 
-        <div class="d-grid">
-          <%= form.submit "Create Account", class: "btn btn-primary" %>
+    <%= form_with model: @user, url: registration_path(code: params[:code]), method: :post, local: true do |form| %>
+      <% if @user.errors.any? %>
+        <div class="alert alert-danger">
+          <%= @user.errors.full_messages.to_sentence.capitalize %>
         </div>
       <% end %>
 
-      <div class="mt-3 text-center">
-        <%= link_to "Sign In", new_session_path, class: "text-decoration-none" %>
+      <div class="mb-3">
+        <%= form.label :name, class: "form-label fw-bold" %>
+        <%= form.text_field :name, class: "form-control form-control-lg", autofocus: true, required: true %>
+        <div class="form-text">You can change this anytime</div>
+      </div>
+
+      <div class="mb-3">
+        <%= form.label :email_address, "Email", class: "form-label fw-bold" %>
+        <%= form.email_field :email_address, class: "form-control form-control-lg", required: true %>
+        <div class="form-text">For password recovery only, we don't spam</div>
+      </div>
+
+      <div class="mb-4">
+        <%= form.label :password, class: "form-label fw-bold" %>
+        <%= form.password_field :password, class: "form-control form-control-lg", required: true %>
+        <div class="form-text">Pick a strong one, <%= User::PASSWORD_MIN_LENGTH %> characters minimum</div>
+      </div>
+
+      <div class="d-flex gap-2">
+        <%= form.submit "Create Account", class: "btn btn-primary btn-lg" %>
       </div>
     <% end %>
-  </div>
-</div>
+  <% end %>
+<% end %>
