Use title case in the forms consistently

--- a/app/views/passwords/new.html.erb
+++ b/app/views/passwords/new.html.erb
@@ -1,4 +1,4 @@
-<%= render SmallBoxComponent.new(title: "Forgot password?") do |c| %>
+<%= render SmallBoxComponent.new(title: "Forgot Password?") do |c| %>
   <% c.with_footer do %>
     <%= link_to "Back to sign in", new_session_path, class: "text-muted" %>
   <% end %>
