--- a/app/views/registration/confirmations/new.html.erb
+++ b/app/views/registration/confirmations/new.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "Resend Confirmation" %>
 
-<%= render SmallBoxComponent.new(title: "Resend confirmation") do |c| %>
+<%= render SmallBoxComponent.new(title: "Resend Confirmation") do |c| %>
   <% c.with_notice do %>
     <p class="fs-5">Enter your email address and we'll send you a new confirmation link.</p>
   <% end %>
