--- a/app/views/registration/confirmation_pending/show.html.erb
+++ b/app/views/registration/confirmation_pending/show.html.erb
@@ -13,7 +13,7 @@
     <p class="mb-4">Once you've confirmed your email, you can sign in to your account.</p>
 
     <div class="d-flex gap-2">
-      <%= link_to "Log In", new_session_path, class: "btn btn-primary btn-lg" %>
+      <%= link_to "Sign In", new_session_path, class: "btn btn-primary btn-lg" %>
     </div>
 
     <div class="mt-3 text-center">
