--- a/app/views/sent_emails/show.html.erb
+++ b/app/views/sent_emails/show.html.erb
@@ -50,7 +50,7 @@
             <pre class="mb-0"><%= @email[:text_part] %></pre>
           </div>
           <div class="tab-pane fade" id="html-content" role="tabpanel">
-            <iframe srcdoc="<%= ERB::Util.html_escape(@email[:html_part]) %>" style="width: 100%; min-height: 400px; border: none;"></iframe>
+            <iframe srcdoc="<%= ERB::Util.html_escape(@email[:html_part]) %>" sandbox title="Email HTML preview" referrerpolicy="no-referrer" style="width: 100%; min-height: 400px; border: none;"></iframe>
           </div>
         </div>
       <% else %>
