Use admin permission to authorize Mission Control access

--- a/app/views/admins/show.html.erb
+++ b/app/views/admins/show.html.erb
@@ -44,6 +44,19 @@
             </div>
           </div>
         </div>
+
+        <div class="col-md-6 col-lg-4 mb-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">
+                <%= icon("stack", css_class: "me-2") %>
+                Background Jobs
+              </h5>
+              <p class="card-text">Monitor and manage background job queues</p>
+              <%= link_to "View Jobs", "/jobs", class: "btn btn-primary" %>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
