Move `SentEmailsController` to `Development` namespace

--- a/app/views/development/sent_emails/show.html.erb
+++ b/app/views/development/sent_emails/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container my-4">
   <div class="mb-4">
-    <%= link_to "← Back to all emails", sent_emails_path, class: "btn btn-sm btn-outline-secondary" %>
+    <%= link_to "← Back to all emails", development_sent_emails_path, class: "btn btn-sm btn-outline-secondary" %>
   </div>
 
   <div class="card">
