--- a/app/views/development/sent_emails/index.html.erb
+++ b/app/views/development/sent_emails/index.html.erb
@@ -2,7 +2,7 @@
   <div class="d-flex justify-content-between align-items-center mb-4">
     <h1>Development Emails</h1>
     <% if @emails.any? %>
-      <%= button_to "Purge All", purge_sent_emails_path, method: :delete, class: "btn btn-outline-danger btn-sm",
+      <%= button_to "Purge All", purge_development_sent_emails_path, method: :delete, class: "btn btn-outline-danger btn-sm",
           data: { turbo_confirm: "Are you sure you want to delete all emails?" } %>
     <% end %>
   </div>
@@ -14,7 +14,7 @@
   <% else %>
     <div class="list-group">
       <% @emails.each do |email| %>
-        <%= link_to sent_email_path(id: email[:id]), class: "list-group-item list-group-item-action" do %>
+        <%= link_to development_sent_email_path(id: email[:id]), class: "list-group-item list-group-item-action" do %>
           <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1"><%= email[:subject] %></h5>
             <small class="text-muted"><%= time_ago_in_words(email[:timestamp]) %> ago</small>
